fixed scroll bar spacing

--- a/ui/home.css
+++ b/ui/home.css
@@ -3,7 +3,7 @@ body {
     grid-template-areas: 'left center right';
     grid-template-columns: repeat(3, 1fr); 
     grid-template-rows: 80px; 
-    grid-gap: 519px;
+    grid-gap: 567px;
     background-color: pink; 
     overflow: hidden; 
 }
@@ -14,6 +14,7 @@ body {
     overflow: scroll; 
     grid-area: right; 
     max-width: 100%; 
+    margin: 0;
 }
 
 input[type="submit"] {
